# internal/delivery/http/handlers/communication_handler.go
@@ -22,6 +22,11 @@ func NewCommunicationHandler(deps *http_deps.Dependencies, logs *slog.Logger) *C
 }
 
 // swagger:route POST /api/v1/communications communications createCommunication
+// Security:
+//   Bearer:
+// responses:
+//   201: getCommunicationResponse
+//   400: errorResponse
 func (h *CommunicationHandler) Create(c *gin.Context) {
 	var req http_requests.CreateCommunicationRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -51,6 +56,11 @@ func (h *CommunicationHandler) Create(c *gin.Context) {
 }
 
 // swagger:route GET /api/v1/communications/{id} communications getCommunication
+// Security:
+//   Bearer:
+// responses:
+//   200: getCommunicationResponse
+//   404: errorResponse
 func (h *CommunicationHandler) GetByID(c *gin.Context) {
 	id := c.Param("id")
 	res, err := h.deps.App.Queries.GetCommunicationByID.Handle(c.Request.Context(), query.FetchCommunicationByID{ID: id})
@@ -62,6 +72,12 @@ func (h *CommunicationHandler) GetByID(c *gin.Context) {
 }
 
 // swagger:route PUT /api/v1/communications/{id} communications updateCommunication
+// Security:
+//   Bearer:
+// responses:
+//   200: getCommunicationResponse
+//   400: errorResponse
+//   404: errorResponse
 func (h *CommunicationHandler) Update(c *gin.Context) {
 	id := c.Param("id")
 	var req http_requests.UpdateCommunicationRequest
@@ -94,6 +110,11 @@ func (h *CommunicationHandler) Update(c *gin.Context) {
 }
 
 // swagger:route DELETE /api/v1/communications/{id} communications deleteCommunication
+// Security:
+//   Bearer:
+// responses:
+//   204:
+//   500: errorResponse
 func (h *CommunicationHandler) Delete(c *gin.Context) {
 	id := c.Param("id")
 	err := h.deps.App.Commands.DeleteCommunication.Handle(c.Request.Context(), command.DeleteCommunicationCommand{ID: id})
@@ -105,6 +126,11 @@ func (h *CommunicationHandler) Delete(c *gin.Context) {
 }
 
 // swagger:route GET /api/v1/communications communications listCommunications
+// Security:
+//   Bearer:
+// responses:
+//   200: listCommunicationsResponse
+//   500: errorResponse
 func (h *CommunicationHandler) List(c *gin.Context) {
 	res, err := h.deps.App.Queries.ListCommunications.Handle(c.Request.Context(), query.FetchCommunicationList{})
 	if err != nil {
